# carts-benchmarks

./: .gitignore  README.md  benchmark_common.py  benchmark_runner.py  carts-benchmarks  pyproject.toml  slurm_batch.py  slurm_job_result.py
common/: carts.mk
configs/: arts-16T.cfg  arts-2T.cfg  arts-32T.cfg  arts-4T.cfg  arts-8T.cfg  arts.cfg  local.cfg
configs/experiments/: all-benchmarks-full-large-extralarge.json  all-benchmarks-multinode-extralarge.json  (+18 more)
graph500/: carts.mk
introspection/: DatablockStress.c  SchedulerStress.c
kastors-jacobi/: carts.mk
llama2-transformer/: Makefile  README.md  transformer.c
lulesh/: Makefile  lulesh.c
ml-kernels/: README.md  carts.mk
monte-carlo/: carts.mk
polybench/: carts.mk
scripts/: artifacts.py  benchmark_analyze.py  benchmark_artifacts.py  benchmark_common.py  benchmark_execution.py  benchmark_metadata.py  benchmark_models.py  benchmark_orchestration.py  benchmark_pipeline.py  benchmark_report.py  benchmark_runner.py  benchmark_verification.py  common.py  execution.py  metadata.py  models.py  orchestration.py  pipeline.py  report.py  runner.py  verification.py
seissol/: README.md  carts.mk
specfem3d/: README.md  carts.mk
stream/: Makefile  stream.c
sw4lite/: Makefile  README.md  carts.mk
task-parallelism-omp/: README.md
tests/: test_benchmark_orchestration.py  test_benchmark_report.py  test_benchmark_verification.py  test_orchestration.py  test_perf_gate_policy.py  test_report.py  test_runner_stats.py  test_slurm_batch.py  test_slurm_batch_request.py  test_slurm_experiment.py  test_verification.py
(+136 files in other folders)
