[tool.poetry]
name = "carts-benchmarks"
version = "0.1.0"
description = "CARTS Benchmark Runner - Build, run, and verify"
authors = ["CARTS Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.15.0"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
